<resources>
    <string name="app_name">TripBook</string>

    <!--Facebook strings-->
    <!--<string name="app_name">My Travel Planner</string>-->
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">335323516663776</string>
    <string name="exception">Exception: %1$s</string>

    <!-- navigation drawer items-->
    <string name="title_trip">Trips</string>
    <string name="title_place">Places</string>
    <string name="title_social">Friends</string>
    <string name="title_starred">Favourite</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>

    <!-- List view -->
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid</string>
    <string name="linear_layout_manager">List</string>
    <string name="staggered_layout_manager">Staggered</string>
    <string name="search">Search</string>

    <!-- Detail view -->
    <string name="element_title">Title</string>
    <string name="element_edit">Edit</string>
    <string name="element_share">Share</string>
    <string name="element_save">Save</string>
    <string name="element_cancel">Cancel</string>

    <!--Card view-->
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font
            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_item_title">Add new</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!--Google+ Login strings -->
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="label_name">Name</string>
    <string name="label_date">Date</string>
    <string name="label_start">Start on</string>
    <string name="label_visited">Visited on</string>
    <string name="label_end">End on</string>
    <string name="label_location">Address</string>
    <string name="label_notes">Notes</string>
    <string name="label_rating">Rating</string>
    <string name="dialog_cancel_save_message">Do you really want to discard this item?</string>
    <string name="dialog_cancel_save_title">Discard Item?</string>
    <string name="search_title">Search TripBook</string>
    <string name="search_hint">search names and notes</string>
    <string name="hint_trip_name">Enter title or description(required)</string>
    <string name="hint_notes">Enter notes for the item. These notes are searchable. </string>
    <string name="enddate_before_startdate">The end date must be at least the same as the start date</string>
    <string name="search_nearby">Search nearby</string>
    <string name="select_places">Places to view</string>

    <string name="search_nearby_title">Search for ...</string>
    <string name="filter_place_title">View places visited...</string>
    <string name="element_delete">Delete</string>
    <string name="date_picker_title">Select date</string>
    <string name="take_photo">Photo</string>
    <string name="image_path">/storage/emulated/0/Pictures/TripBook/</string>

</resources>
