<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/trip_add_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/trip_add_start"
        android:layout_alignStart="@+id/trip_add_start"
        android:layout_marginTop="1dp"
        android:background="@color/navigation_row_selected"
        android:inputType="textAutoCorrect"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewName"
        android:layout_marginTop="18dp"
        android:text="@string/label_start" />

    <TextView
        android:id="@+id/trip_add_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/textView"
        android:background="@color/navigation_row_selected"
        android:ems="10"
        android:focusable="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:text="@string/label_end" />

    <TextView
        android:id="@+id/trip_add_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/trip_add_start"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textViewEnd"
        android:background="@color/navigation_row_selected"
        android:ems="10"
        android:gravity="center" />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/item_main_image"
        android:layout_alignTop="@+id/trip_add_start"
        android:layout_toRightOf="@+id/trip_add_start"
        android:layout_toEndOf="@+id/trip_add_start"
        android:src="@drawable/empty_photo"/>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_below="@+id/textViewEnd"
        android:layout_marginTop="15dp"
        android:text="@string/label_notes" />

    <EditText
        android:id="@+id/trip_add_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="8dp"
        android:background="@color/navigation_row_selected"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:linksClickable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_social"
        android:id="@+id/textView3"
        android:layout_below="@+id/trip_add_notes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@color/navigation_row_selected"/>

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="@dimen/small_button_diameter"
        android:layout_height="@dimen/small_button_diameter"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/ic_input_add"
        android:elevation="@dimen/elevation_low"
        android:tint="@android:color/white"
        android:background="@drawable/oval"
        android:layout_below="@+id/trip_add_notes"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/horizontal_list_view_height"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/trip_view_friends"
        ></LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_place"
        android:id="@+id/textView4"
        android:layout_below="@+id/trip_view_friends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@color/navigation_row_selected"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/horizontal_list_view_height"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/trip_view_places"
        ></LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_gallery"
        android:id="@+id/textView5"
        android:layout_below="@+id/trip_view_places"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@color/navigation_row_selected" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/horizontal_list_view_height"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/trip_view_gallery"
        ></LinearLayout>


</RelativeLayout>